# buildinfo

./: Cargo.toml
.github/workflows/: build.yml
buildinfo/: Cargo.toml
buildinfo-cli/: .gitignore  Cargo.toml
buildinfo-cli/src/: build.rs  cli.rs  git.rs  main.rs  project.rs
buildinfo-macro/: Cargo.toml
buildinfo-macro/src/: lib.rs
buildinfo/src/: lib.rs
ci/: install-buildinfo
