[package]
name = "buildinfo-cli"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.30", features = ["derive"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.139"
toml = "0.8.20"
slurp = "1.0.1"
whoami = "1.5.2"
chrono = "0.4.39"
git2 = "0.20.0"
fast-xml = { version = "0.23.1", features = ["serialize"] }
buildinfo = { path = "../buildinfo" }


[[bin]]
name = "buildinfo"
path = "src/main.rs"
